--- a/ejercicio 7/estilo/ejercicio8.css
+++ b/ejercicio 7/estilo/ejercicio8.css
@@ -1,6 +1,6 @@
 h1 {color: red}
 p.Biblio {font-size: 16px; color: blue;}
-
+li{color:cornflowerblue; font-size: 20px;}
 
 /* Uso de metadatos basados en clases para aplicar formatos*/
 cite.Titulo {font-size: 20px;}
