--- a/ejercicio 8/estilo/ejercicio9.css
+++ b/ejercicio 8/estilo/ejercicio9.css
@@ -6,3 +6,7 @@ div:hover{width:400px; height: 400px;
          background-color: blue;
 
 }
+P::first-letter{font-family: Courier New, Courier, monospace;
+                font-size: 25px;
+
+}
