--- a/ejercicio 9/estilo/spain.css
+++ b/ejercicio 9/estilo/spain.css
@@ -1,4 +1,5 @@
 *{box-sizing: border-box;}
+body{background-image:url(fondo.jpg)}
 h1{ color: red; text-align: center;
   }
   article{width: 90%; margin: 1%;}
